--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   },
   "homepage": "https://github.com/singnet/snet-rfai.git#readme",
   "dependencies": {
+    "@openzeppelin/contracts": "^3.2.0",
+    "@truffle/contract": "^4.2.23",
+    "@truffle/hdwallet-provider": "^1.1.0",
     "openzeppelin-solidity": "1.11.0",
-    "singularitynet-token-contracts": "2.0.1",
-    "truffle": "4.1.13",
-    "truffle-contract": "3.0.6",
-    "truffle-hdwallet-provider": "0.0.5"
+    "singularitynet-token-contracts": "2.0.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
