--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "package-npm": "node scripts/package-npm.js",
     "deploy": "scripts/truffle-migrate",
-    "compile": "node_modules/.bin/truffle compile",
-    "test": "rm -rf build && node_modules/.bin/truffle test",
-    "test-develop": "rm -rf build && node_modules/.bin/truffle test --network develop"
+    "compile": "truffle compile",
+    "test": "rm -rf build && truffle test",
+    "test-develop": "rm -rf build && truffle test --network develop"
   },
   "repository": {
     "type": "git",
@@ -24,10 +24,10 @@
   },
   "homepage": "https://github.com/singnet/snet-rfai.git#readme",
   "dependencies": {
+    "truffle": "5.1.46",
     "@openzeppelin/contracts": "^3.2.0",
     "@truffle/contract": "^4.2.23",
     "@truffle/hdwallet-provider": "^1.1.0",
-    "openzeppelin-solidity": "1.11.0",
     "singularitynet-token-contracts": "2.0.1"
   },
   "devDependencies": {
