--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "singularitynet-rfai-contracts",
-  "version": "0.2.7",
+  "version": "new_version",
   "private": true,
   "description": "Includes RFAI contracts, migrations, tests",
   "directories": {
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/singnet/snet-rfai.git#readme",
   "dependencies": {
     "openzeppelin-solidity": "1.11.0",
-    "singularitynet-token-contracts": "2.0.1",
+    "singularitynet-token-contracts": "new version",
     "truffle": "4.1.13",
     "truffle-contract": "3.0.6",
     "truffle-hdwallet-provider": "0.0.5"
