--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "singularitynet-rfai-contracts",
-  "version": "new_version",
+  "version": "3.0.0",
   "private": true,
   "description": "Includes RFAI contracts, migrations, tests",
   "directories": {
