--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   },
   "homepage": "https://github.com/singnet/snet-rfai.git#readme",
   "dependencies": {
-    "truffle": "5.1.46",
     "@openzeppelin/contracts": "^3.2.0",
     "@truffle/contract": "^4.2.23",
     "@truffle/hdwallet-provider": "^1.1.0",
-    "singularitynet-token-contracts": "2.0.1"
+    "singularitynet-token-contracts": "^3.0.0",
+    "truffle": "5.1.46"
   },
   "devDependencies": {
     "chai": "^4.2.0",
